0.7.1/_sources/autoapi/hklpy2/backends/base/index.rst.txt
base
====

.. py:module:: hklpy2.backends.base

.. autoapi-nested-parse::

   Import: ``hklpy2.backends.base``

   Abstract base class for all solvers.

   .. autosummary::

       ~SolverBase




Module Contents
---------------

.. py:class:: SolverBase(geometry: str, *, mode: str = '', _resolve_default_mode: bool = True, **kwargs: Any)

   .. container:: import-path

      Import: ``hklpy2.backends.base.SolverBase``


   Bases: :py:obj:`abc.ABC`


   Base class for all |hklpy2| |solver| classes.

   PARAMETERS

   geometry : str
       Name of geometry.
   mode: str
       Name of operating mode.  (default: current mode)

   Example::

       import hklpy2

       class MySolver(hklpy2.SolverBase):
           ...

   .. note:: :class:`~SolverBase`, an `abstract base
       class <https://docs.python.org/3/library/abc.html#abc.ABC>`_,
       cannot not be used directly by |hklpy2| users.

   As the parent class for all custom :index:`Solver` classes,
   :class:`~SolverBase` defines the methods and attributes to be written
   that will connect |hklpy2| with the support library that defines
   specific diffractometer geometries and the computations for
   using them.  Subclasses should implement each of these methods
   as best fits the underlying support library.

   .. seealso:: :mod:`~hklpy2.backends.hkl_soleil` & :mod:`~hklpy2.backends.no_op`

   .. rubric:: Python Abstract Methods

   Subclasses must override each of these methods.

   .. autosummary::

       ~addReflection
       ~calculate_UB
       ~extra_axis_names
       ~forward
       ~geometries
       ~inverse
       ~modes
       ~pseudo_axis_names
       ~real_axis_names
       ~refineLattice
       ~removeAllReflections

   .. rubric:: Python Methods (concrete, overridable)

   .. autosummary::

       ~set_reals

   .. rubric:: Python Properties (concrete, overridable)

   .. autosummary::

       ~U
       ~UB

   .. rubric:: Geometry Registry

   .. autosummary::

       ~_geometry_registry
       ~default_geometry
       ~default_mode
       ~register_geometry

   .. rubric:: Python Properties

   .. autosummary::

       ~all_extra_axis_names
       ~extra_axis_names
       ~extras
       ~geometry
       ~lattice
       ~mode
       ~sample


   .. py:attribute:: ANGLE_UNITS
      :type:  str
      :value: 'degrees'


      Angle units used by this solver for unit cell and real axis rotations.

      Solver can override this **constant**.  Must be convertible to
      ``INTERNAL_ANGLE_UNITS``.


   .. py:attribute:: LENGTH_UNITS
      :type:  str
      :value: 'angstrom'


      Length units used by this solver for unit cell and wavelength.

      Solver can override this **constant**.  Must be convertible to
      ``INTERNAL_LENGTH_UNITS``.


   .. py:property:: U
      :type: ~hklpy2.typing.Matrix3x3


      Relative orientation of the crystal on the diffractometer (3x3 rotation matrix).

      The default implementation stores and returns the value set via the
      setter, initialised to the identity matrix.  Subclasses that maintain
      an internal backend object (e.g. ``hkl_soleil``) should override both
      getter and setter to read/write the backend state directly.


   .. py:property:: UB
      :type: ~hklpy2.typing.Matrix3x3


      Orientation matrix (3x3).

      The default implementation stores and returns the value set via the
      setter, initialised to the identity matrix.  Subclasses that maintain
      an internal backend object (e.g. ``hkl_soleil``) should override both
      getter and setter to read/write the backend state directly.


   .. py:method:: addReflection(reflection: ~hklpy2.backends.typing.ReflectionDict) -> None
      :abstractmethod:


      Add coordinates of a diffraction condition (a reflection).



   .. py:property:: all_extra_axis_names
      :type: List[str]


      Unique, sorted list of extra axis names in all modes for chosen engine.


   .. py:method:: calculate_UB(r1: ~hklpy2.backends.typing.ReflectionDict, r2: ~hklpy2.backends.typing.ReflectionDict) -> ~hklpy2.typing.Matrix3x3
      :abstractmethod:


      Calculate the UB (orientation) matrix with two reflections.

      The method of Busing & Levy, Acta Cryst 22 (1967) 457.

      .. rubric:: Implementation contract

      ``calculate_UB`` is the authoritative installer of its own
      orientation pair.  Every conformant implementation **must**
      execute these steps, in order:

      1. :meth:`removeAllReflections` -- discard any reflections
         previously stored in the solver-side sample state.
      2. :meth:`addReflection(r1) <addReflection>` -- install the
         first orientation reflection from the supplied dict.
      3. :meth:`addReflection(r2) <addReflection>` -- install the
         second orientation reflection from the supplied dict.
      4. Invoke the backend library's Busing & Levy routine on the
         freshly-installed pair to compute *UB*.
      5. Return *UB* as a 3x3 ``list[list[float]]``.

      The implementation **must not** assume that the solver's
      reflection list already contains ``r1`` and ``r2``.  The
      :class:`~hklpy2.ops.Core` layer pushes the python-side sample
      state via :meth:`update_solver` before invoking
      ``calculate_UB``, but ``calculate_UB`` itself is the
      authoritative installer of the orienting pair so that the
      result is reproducible from the supplied arguments alone.



   .. py:method:: default_geometry() -> str
      :classmethod:


      Return this solver's default geometry name.

      The default is the **first** entry in :meth:`geometries`.  Subclasses
      that do not use :attr:`_geometry_registry` (e.g.
      :class:`~hklpy2.backends.hkl_soleil.HklSolver`) should override this
      method.

      :raises SolverError: If the solver has no registered geometries.



   .. py:method:: default_mode(geometry: str) -> str
      :classmethod:


      Return the default mode for *geometry*.

      Resolution order:

      1. If a :class:`~hklpy2.backends.typing.GeometryDescriptor` is
         registered for *geometry* and its
         :attr:`~GeometryDescriptor.default_mode` is non-empty, return that.
      2. Otherwise return the first entry in the descriptor's
         :attr:`~GeometryDescriptor.modes`.

      Subclasses that do not use :attr:`_geometry_registry` should override
      this method to query their underlying library directly.

      :raises SolverError: If *geometry* is not registered, or has no modes defined.



   .. py:property:: extra_axis_names
      :type: List[str]

      :abstractmethod:


      Ordered list of any extra axis names (such as x, y, z).


   .. py:property:: extras
      :type: ~hklpy2.typing.KeyValueMap


      Ordered dictionary of any extra parameters.


   .. py:method:: forward(pseudos: ~hklpy2.typing.NamedFloatDict) -> List[~hklpy2.typing.NamedFloatDict]
      :abstractmethod:


      Compute list of solutions(reals) from pseudos (hkl -> [angles]).

      Returns all valid real-axis solutions that the backend engine can
      find for the given pseudo-axis values, geometry, and mode.  The
      number of solutions depends on the backend library's capabilities:
      some engines enumerate all mathematically valid solutions while
      others return only one.  A single-element list is a valid return
      value.

      The :class:`~hklpy2.ops.Core` layer iterates over the returned
      list, applies constraint filtering, and passes the survivors to a
      solution picker (see :func:`~hklpy2.utils.pick_first_solution`,
      :func:`~hklpy2.utils.pick_closest_solution`).

      :param pseudos: Pseudo-axis values keyed by name
                      (e.g. ``{"h": 1.0, "k": 0.0, "l": 0.0}``).
      :type pseudos: NamedFloatDict

      :returns: Each element is a dictionary of real-axis values keyed by name
                (e.g. ``{"omega": 10.0, "chi": 0.0, "phi": 0.0, "tth": 20.0}``).
                An empty list signals no solutions; a single-element list is
                acceptable.
      :rtype: list[NamedFloatDict]

      :raises NoForwardSolutions: If the backend cannot find any solution.



   .. py:method:: geometries() -> List[str]
      :classmethod:

      :abstractmethod:


      Ordered list of the geometry names supported by this solver.

      Implementations that use the :attr:`_geometry_registry` should return
      ``sorted(cls._geometry_registry.keys())``.  Solvers backed by an
      external library (e.g. :class:`~hklpy2.backends.hkl_soleil.HklSolver`)
      may query that library's own registry instead.

      EXAMPLES::

          >>> from hklpy2 import get_solver
          >>> Solver = get_solver("no_op")
          >>> Solver.geometries()
          []
          >>> solver = Solver("TH TTH Q")
          >>> solver.geometries()
          []



   .. py:property:: geometry
      :type: str


      Name of selected diffractometer geometry.

      Cannot be changed once solver is created.  Instead, make a new solver
      for each geometry.


   .. py:method:: inverse(reals: ~hklpy2.typing.NamedFloatDict) -> ~hklpy2.typing.NamedFloatDict
      :abstractmethod:


      Compute dict of pseudos from reals (angles -> hkl).



   .. py:property:: lattice
      :type: ~hklpy2.typing.NamedFloatDict


      Crystal lattice parameters.  (Not used by this |solver|.)


   .. py:property:: mode
      :type: str


      Diffractometer geometry operation mode for :meth:`forward()`.

      A mode defines which axes will be modified by the
      :meth:`forward` computation.


   .. py:property:: modes
      :type: List[str]

      :abstractmethod:


      List of the geometry operating modes.


   .. py:attribute:: name
      :type:  str
      :value: 'base'


      Name of this Solver.


   .. py:property:: pseudo_axis_names
      :type: List[str]

      :abstractmethod:


      Ordered list of the pseudo axis names (such as h, k, l).


   .. py:property:: real_axis_names
      :type: List[str]

      :abstractmethod:


      Ordered list of the real axis names (such as th, tth).


   .. py:method:: refineLattice(reflections: List[~hklpy2.backends.typing.ReflectionDict]) -> ~hklpy2.typing.NamedFloatDict | None
      :abstractmethod:


      Refine the lattice parameters from a list of reflections.

      .. rubric:: Implementation contract

      Like :meth:`calculate_UB`, ``refineLattice`` is the authoritative
      installer of its input reflections.  Every conformant
      implementation **must**:

      1. :meth:`removeAllReflections` -- discard any reflections
         previously stored in the solver-side sample state.
      2. :meth:`addReflection(r) <addReflection>` for each ``r`` in
         ``reflections`` -- install the supplied reflections.
      3. Invoke the backend library's lattice-refinement routine on
         the freshly-installed list.
      4. Return the refined lattice parameters as a
         :data:`~hklpy2.typing.NamedFloatDict` (or ``None`` if the
         backend does not support refinement).

      The implementation **must not** assume that the solver's
      reflection list already contains the supplied reflections.



   .. py:method:: register_geometry(descriptor: ~hklpy2.backends.typing.GeometryDescriptor) -> None
      :classmethod:


      Add or replace a geometry in this solver's registry.

      Registers *descriptor* under ``descriptor.name`` in
      :attr:`_geometry_registry`.  Calling this method on a subclass
      affects only that subclass's registry, not the base class or any
      sibling solver.

      :param descriptor: The geometry to register.  The :attr:`~GeometryDescriptor.name`
                         attribute is used as the registry key.
      :type descriptor: GeometryDescriptor

      :raises TypeError: If *descriptor* is not a :class:`~hklpy2.backends.typing.GeometryDescriptor`.

      .. rubric:: Examples

      >>> from hklpy2.backends.typing import GeometryDescriptor
      >>> from hklpy2.backends.th_tth_q import ThTthSolver
      >>> geo = GeometryDescriptor(
      ...     name="MY GEO",
      ...     pseudo_axis_names=["h", "k", "l"],
      ...     real_axis_names=["mu", "delta", "nu", "eta", "chi", "phi"],
      ...     modes=["lifting detector"],
      ... )
      >>> ThTthSolver.register_geometry(geo)
      >>> "MY GEO" in ThTthSolver.geometries()
      True



   .. py:method:: removeAllReflections() -> None
      :abstractmethod:


      Remove all reflections.



   .. py:property:: sample
      :type: Union[~hklpy2.backends.typing.SampleDict, None]


      Crystalline sample.


   .. py:method:: set_reals(reals: ~hklpy2.typing.NamedFloatDict) -> None

      Set current real-axis values in the solver's internal geometry object.

      This method is called by :meth:`~hklpy2.ops.Core.forward` to push
      the current motor positions (or preset values for constant axes) into
      the solver before computing forward-calculation solutions.  Solvers
      that maintain an internal geometry object with real-axis state (such
      as ``hkl_soleil``, which calls ``axis_values_set`` on its libhkl
      geometry) **must** override this method.

      The default implementation is a deliberate no-op so that solvers
      which do not require real-axis state (e.g. pure function-based
      backends) can inherit from :class:`SolverBase` without needing to
      define this method.

      :param reals: Dictionary mapping solver real-axis names to their current values
                    (in the solver's internal angle units).
      :type reals: NamedFloatDict



   .. py:property:: summary
      :type: ~pyRestTable.Table


      Table of this geometry (modes, axes).

      .. seealso:: :ref:`geometries.summary_tables`,
          :func:`hklpy2.user.solver_summary()`


   .. py:attribute:: version
      :type:  str

      Version of this Solver.


